# VoxelRaytracer

./: .gitignore  CMakeLists.txt  README.md
apps/voxel_rt/: main.cpp
include/tol/: tiny_obj_loader.h
include/voxel_rt/core/: buffer_2d.hpp  camera.hpp  image_buffer.hpp  ray.hpp  voxel_grid.hpp  voxel_storage.hpp  voxel_type.hpp
include/voxel_rt/io/: ppm_writer.hpp
include/voxel_rt/math/: aabb.hpp  math.hpp  ray.hpp  vec3.hpp  vec3i.hpp
include/vrt/accel/: blas.hpp  dag.hpp  dag_v2.hpp  tlas.hpp
include/vrt/accel/blas/: blas.hpp  blas_builder.hpp  blas_instance.hpp  blas_manager.hpp  leaf.hpp  leaf_hasher.hpp  node.hpp  node_hasher.hpp
include/vrt/core/: camera.hpp  direction.hpp  instance.hpp  ray_hit.hpp  scene.hpp  types.hpp
include/vrt/gfx/: presenter.hpp  window.hpp
include/vrt/io/: ppm_writer.hpp
include/vrt/math/: aabb.hpp  math.hpp  ray.hpp  vec3.hpp
include/vrt/rt/: hit.hpp  intersector.hpp
include/vrt/voxel/: chunk.hpp  dag_pool.hpp  dag_pool_manager.hpp  intersector.hpp  leaf.hpp  leaf_hasher.hpp  node.hpp  node_hasher.hpp  voxel.hpp  voxel_model.hpp
src/: dummy.cpp
src/accel/: blas.cpp  dag.cpp  dag_v2.cpp  tlas.cpp
src/accel/blas/: blas.cpp  blas_builder.cpp  blas_manager.cpp
src/core/: camera.cpp  image_buffer.cpp
src/gfx/: presenter.cpp  window.cpp
src/io/: ppm_writer.cpp
src/math/: aabb.cpp
src/rt/: intersector.cpp
src/voxel/: dag_pool_manager.cpp  intersector.cpp  voxel_model.cpp
